<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/new_background"
    android:orientation="vertical"
    app:layoutDescription="@xml/fragment_info_scene">



        <ImageView
            android:id="@+id/about_Fragment_picture"
            android:layout_width="match_parent"
            android:layout_height="268dp"
            android:contentDescription="@string/about_fragment_image"
            android:scaleType="fitXY"
            android:src="@drawable/with_circules"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/credits"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_Fragment_picture" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/info_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_credit">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_team_leader"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_credit"
            tools:ignore="NotSibling">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/card_constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ic_image_leader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/team_leader_description"
                    android:src="@drawable/ic_hacker"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_name_ibrahim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/name_ibrahim"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/ic_image_leader"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_content_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_leader_description"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/text_name_ibrahim"
                    app:layout_constraintTop_toTopOf="@+id/text_name_ibrahim" />

                <ImageButton
                    android:id="@+id/button_github_ibrahim"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/social_media_shape"
                    android:contentDescription="@string/ibrahim_github_button"
                    android:elevation="8dp"
                    android:onClick="addCallback"
                    android:src="@drawable/ic_github"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_team_leader">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ic_image_member_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_programmer"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_name_aymn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/name_ayman"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/ic_image_member_one"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_content_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_member_description"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/text_name_aymn"
                    app:layout_constraintTop_toTopOf="@+id/text_name_aymn" />

                <ImageButton
                    android:id="@+id/button_github_aymn"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/social_media_shape"
                    android:contentDescription="@string/ayman_github_button"
                    android:elevation="8dp"
                    android:onClick="addCallback"
                    android:src="@drawable/ic_github"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ic_image_member_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_woman"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_name_rafal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/name_rafal"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/ic_image_member_two"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_content_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_member_description"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/text_name_rafal"
                    app:layout_constraintTop_toTopOf="@+id/text_name_rafal" />

                <ImageButton
                    android:id="@+id/button_github_rafal"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/social_media_shape"
                    android:contentDescription="@string/rafal_github_button"
                    android:elevation="8dp"
                    android:onClick="addCallback"
                    android:src="@drawable/ic_github"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false">

                <ImageView
                    android:id="@+id/ic_image_member_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_programmer"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_name_mohammed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/mohammed_ehsan"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/ic_image_member_three"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_content_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_member_description"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/text_name_mohammed"
                    app:layout_constraintTop_toTopOf="@+id/text_name_mohammed" />

                <ImageButton
                    android:id="@+id/button_github_basheer"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/social_media_shape"
                    android:contentDescription="@string/moe_github_button"
                    android:elevation="8dp"
                    android:onClick="addCallback"
                    android:src="@drawable/ic_github"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="12dp"
            app:cardCornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView4">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ic_image_member_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/ic_woman"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/text_name_asawer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/asawer_dawood"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toEndOf="@+id/ic_image_member_four"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_content_five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/team_member_description"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/text_name_asawer"
                    app:layout_constraintTop_toTopOf="@+id/text_name_asawer" />

                <ImageButton
                    android:id="@+id/button_github_huda"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/social_media_shape"
                    android:contentDescription="@string/asawer_github_button"
                    android:elevation="8dp"
                    android:onClick="addCallback"
                    android:src="@drawable/ic_github"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.motion.widget.MotionLayout>